# rusty_ds9

./: .gitignore  Cargo.toml  README.md
crates/ds9-app/: Cargo.toml
crates/ds9-app/src/: main.rs  pipelines.py
crates/ds9-app/ui/: main.slint
crates/ds9-catalog/: Cargo.toml
crates/ds9-catalog/src/: lib.rs
crates/ds9-fits/: Cargo.toml
crates/ds9-fits/examples/: wcs_check.rs
crates/ds9-fits/src/: lib.rs
crates/ds9-image/: Cargo.toml
crates/ds9-image/src/: lib.rs
crates/ds9-marker/: Cargo.toml
crates/ds9-marker/src/: lib.rs
docs/: manual.md  manual.tex
